--- a/package.json
+++ b/package.json
@@ -20,15 +20,34 @@
   },
   "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.7.0",
-    "parcel": "^2.7.0",
-    "prettier": "^2.7.1"
+    "@parcel/transformer-sass": "^2.8.0",
+    "parcel": "^2.8.0",
+    "prettier": "^2.8.0"
   },
   "dependencies": {
+    "@lezer/common": "^1.0.2",
+    "@lezer/lr": "^1.2.5",
+    "@parcel/codeframe": "^2.8.0",
+    "@parcel/utils": "^2.8.0",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
+    "base-x": "^4.0.0",
+    "bootstrap": "^5.2.3",
+    "chalk": "^5.1.2",
+    "commander": "^9.4.1",
+    "css-tree": "^2.3.0",
+    "detect-libc": "^2.0.1",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^9.0.0",
     "jquery": "^3.6.1",
+    "lru-cache": "^7.14.1",
+    "msgpackr": "^1.8.1",
     "popper.js": "^1.16.1",
-    "vanilla-tilt": "^1.7.3"
+    "posthtml-parser": "^0.11.0",
+    "react-refresh": "^0.14.0",
+    "semver": "^7.3.8",
+    "svgo": "^3.0.2",
+    "term-size": "^3.0.2",
+    "vanilla-tilt": "^1.7.3",
+    "xxhash-wasm": "^1.0.2"
   }
 }
